# TagMemoRAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml  浪潮RAG_产品说明书_详细设计说明书.md
.codebase-memory/: adr.md
.trellis/: .template-hashes.json  .version
docs/: browser-rag-quick-start.md  clean-env-delivery-verification.md  deepseek-citation-live-verification.md  deepseek-real-pdf-answer-rerun.md  eval-baseline-workflow.md  live-pilot-provider-verification.md  mvp-delivery-guide.md  pre-merge-release-closure-2026-05-26.md  production-deployment-operations.md  production-environment-verification.md  production-pilot-runbook.md  production-provider-e2e-pilot.md  production-provider-real-pdf-rerun.md  production-provider-smoke-live-verification.md  production-provider-smoke-runbook.md  production-provider-smoke-runner-live-verification.md  production-release-checklist.md  rag-quality-gates.md  real-pdf-document-intake-test-2026-05-27.md  system-test-plan.md  tag-ordering-convention.md  test-report.html  trial-operator-handoff-2026-05-27.md  trial-readiness-final-review-2026-05-27.md  trial-report-ci-handoff.md  unified-verify-cli-live-verification.md  user-trial-handoff-2026-05-26.md  wave-phase1-architecture.md
examples/: default-on-retained-monitoring.json
product_manuals/: README.md
scripts/: build_eval_baseline.py  default_on_retained_monitoring.py  diag_context_quality.py  diag_epa_logic_depth.py  diag_evidence_usefulness.py  diag_general_web_answer_eval.py  diag_general_web_ranking_pressure.py  diag_geodesic_rerank.py  diag_mixed_domain_eval.py  diag_multiformat_answer_eval.py  diag_pyramid_dynamic_boost.py  diag_realmanuals_eval.py  diag_same_page_candidate.py  diag_same_page_ordering.py  diag_wave_readiness_flags.py  diagnose_eval_reauthoring.py  eval-siliconflow.sh  ingest_real_manuals.py  production_verify.py  relabel_eval_fixture.py  (+11 more)
(+1949 files in other folders)
