[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tagmemorag"
version = "0.1.0"
description = "AI memory system with tag-based organization and RAG retrieval"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers>=2.7",
    "networkx>=3.2",
    "numpy>=1.26",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tagmemorag"]
