[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tagmemorag"
version = "0.1.0"
description = "AI memory system with tag-based organization and RAG retrieval"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers>=2.7,<3.0",
    "networkx>=3.2",
    "numpy>=1.26,<2.0",
    "torch>=2.2,<2.3",
    "fastapi>=0.110",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "prometheus-client>=0.25.0",
    "opentelemetry-api>=1.41.1",
    "opentelemetry-sdk>=1.41.1",
    "opentelemetry-instrumentation-fastapi>=0.62b1",
    "opentelemetry-exporter-otlp>=1.41.1",
    "pypdf>=6.11.0",
]

[project.scripts]
tagmemorag = "tagmemorag.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tagmemorag"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
